estruturando html/css header, iniciando body

--- a/participantes/marcos/marcos.html
+++ b/participantes/marcos/marcos.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="./style.css">
-    <title>Home</title>
+    <title>Marcos</title>
 </head>
 <body>
     <header>
@@ -17,20 +16,7 @@
         </nav>
     </header>
     <section class="content">
-        <div id="leftArrow">
-            <span class="material-symbols-outlined">
-                arrow_back_ios
-            </span>
-        </div>
-        <div class="photo">
-
-            <p>Nome</p>
-        </div>
-        <div id="rightArrow">
-            <span class="material-symbols-outlined">
-                arrow_forward_ios
-            </span>
-        </div>
+        
     </section>
 </body>
 </html>
