finalizando a home page

--- a/index.html
+++ b/index.html
@@ -17,16 +17,16 @@
         </nav>
     </header>
     <section class="content">
-        <div id="leftArrow">
+        <div class="arrow" id="leftArrow">
             <span class="material-symbols-outlined">
                 arrow_back_ios
             </span>
         </div>
         <div class="photo">
-
-            <p>Nome</p>
+            <img src="./images/ruan.jpg" alt="Ruan" width="300">
+            <span class="name"></span>
         </div>
-        <div id="rightArrow">
+        <div class="arrow" id="rightArrow">
             <span class="material-symbols-outlined">
                 arrow_forward_ios
             </span>
