navbar alignment aprimorated and slider controls alignment fix

--- a/index.html
+++ b/index.html
@@ -1,15 +1,18 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="./style.css">
     <title>Home</title>
 </head>
+
 <body>
     <header>
-        <img class="logoClean" src="./images/logoClean.png" alt="Logo Flit">
+        <img class="logoClean" src="./images/logoClean.png" width="70" alt="Logo Flit">
         <nav>
             <a class="navOption" href="./index.html">Home</a>
             <a class="navOption" href="./david.html">Participantes</a>
@@ -19,18 +22,19 @@
     <section class="content">
         <div class="arrow" id="leftArrow">
             <span class="material-symbols-outlined">
-                arrow_back_ios
+                navigate_before
             </span>
         </div>
         <div class="photo">
-            <img src="./images/ruan.jpg" alt="Ruan" width="300">
+            <img src="./images/ruan.jpg" alt="Ruan" width="350">
             <span class="name"></span>
         </div>
         <div class="arrow" id="rightArrow">
             <span class="material-symbols-outlined">
-                arrow_forward_ios
+                navigate_next
             </span>
         </div>
     </section>
 </body>
+
 </html>
