--- a/participantes/david/david.html
+++ b/participantes/david/david.html
@@ -1,22 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>David</title>
 </head>
+
 <body>
     <header>
-        <img class="logoClean" src="./images/logoClean.png" alt="Logo Flit">
+        <a href="../../index.html"> <img class="logoClean" src="../../images/logoClean.png" width="70"
+                alt="Logo Flit"></a>
+
         <nav>
-            <a class="navOption" href="./index.html">Home</a>
-            <a class="navOption" href="./david.html">Participantes</a>
-            <a class="navOption" href="./sobreNos.html">Sobre nós</a>
+            <a class="navOption" href="../../index.html">Home</a>
+            <a class="navOption" href="../../participantes/david/david.html">Participantes</a>
+            <a class="navOption" href="../../sobreNos.html">Sobre nós</a>
         </nav>
     </header>
     <section class="content">
-        
+
     </section>
 </body>
+
 </html>
