--- a/sobreNos.html
+++ b/sobreNos.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>Sobre nós</title>
 </head>
+
 <body>
     <header>
-        <img class="logoClean" src="./images/logoClean.png" alt="Logo Flit">
+        <a href="./index.html"> <img class="logoClean" src="./images/logoClean.png" width="70" alt="Logo Flit"></a>
+
         <nav>
             <a class="navOption" href="./index.html">Home</a>
             <a class="navOption" href="./participantes/david/david.html">Participantes</a>
@@ -16,7 +19,8 @@
         </nav>
     </header>
     <section class="content">
-        
+
     </section>
 </body>
+
 </html>
