Montando HMTML e CSS pagina sobre mim.

--- a/participantes/david/david.html
+++ b/participantes/david/david.html
@@ -1,22 +1,55 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
     <title>David</title>
 </head>
+
 <body>
     <header>
-        <img class="logoClean" src="./images/logoClean.png" alt="Logo Flit">
+        <img class="logoClean" src="../../images/logoClean.png" alt="Logo Flit" width="70">
         <nav>
             <a class="navOption" href="./index.html">Home</a>
             <a class="navOption" href="./david.html">Participantes</a>
             <a class="navOption" href="./sobreNos.html">Sobre nós</a>
         </nav>
     </header>
-    <section class="content">
-        
+    <section class="sobreMim">
+        <section class="box1" style="grid-area: box1;">
+            <div class="foto">
+                <img src="../../images/david.jpg" alt="foto David" width="100">
+            </div>
+            <div>
+
+
+                <h1>David Marins</h1>
+                <h2>"@david_marins_"</h2>
+
+                <article class="lista">
+
+                    <ul>
+                        <li>Idade: 27 anos.</li>
+                        <li>Ocupação: futebol .</li>
+                        <li>Cidade: Serrita, PE.</li>
+                    </ul>
+                </article>
+            </div>
+        </section>
+
+
+        <section class="box2" style="grid-area: box2;">
+
+
+
+        </section>
+        <section class="box3" style="grid-area: box3;">
+
+
+        </section>
     </section>
 </body>
+
 </html>
