--- a/participantes/marcos/marcos.html
+++ b/participantes/marcos/marcos.html
@@ -1,22 +1,57 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./marcos.css">
     <title>Marcos</title>
 </head>
+
 <body>
     <header>
-        <img class="logoClean" src="./images/logoClean.png" alt="Logo Flit">
+        <img class="logoClean" src="../../images/logoClean.png" width="70" alt="Logo Flit">
         <nav>
             <a class="navOption" href="./index.html">Home</a>
             <a class="navOption" href="./david.html">Participantes</a>
             <a class="navOption" href="./sobreNos.html">Sobre nós</a>
         </nav>
     </header>
-    <section class="content">
-        
-    </section>
+    <div class="grid-container">
+
+        <div class="grid-item item1">
+            <img src="../../images/Marcos.jpeg" width="140" alt="Photo Marcos">
+            <div class="informationPersonal">
+                <p><h1 class="tittle">Marcos</h1></p>
+                <p><h5 class="subTittle">E-mail: marcos_fernandes94@hotmail.com</h5></p>
+                <p><h5 class="subTittle">Idade: 28 anos</h5></p>
+                <p><h5 class="subTittle">Ocupação: Programador</h5></p>
+                <p><h5 class="subTittle">Cidade: São Paulo-SP</h5></p>
+            </div>
+        </div>
+
+        <div class="grid-item item2">
+
+        </div>
+
+        <div class="grid-item item3">
+            <div class="description">
+                <p><h2 class="Name">Seja bem-vindo!</h2></p>
+                <p><h4 class="curiosities">Prazer, eu sou o Marcos, atualmente a minha rotina hoje é trabalhar e estudar na Flit,
+                    tenho como hobbies sair com a família, jogar um futebol, fazer musculação ou qualquer outra atividade fisíca.
+                    Gosto de ouvir uma boa música, seja pagode, sertanejo, hip-hop, eletrônica ou até mesmo uns black antigão. Meu maior objetivo 
+                    hoje é trabalhar na área de tecnologia, ter uma carreira sólida e porque não morar a 500 metros da praia?!
+                </h4></p>
+            </div>
+            <div class="buttons">
+                <a href="../../participantes/jonatan/jonatan.html" class="back button">Anterior</a>
+                <a href="../../participantes/ruan/ruan.html" class="next button">Próximo</a>
+                <a class="edit button">Editar</a>
+            </div>
+
+
+        </div>
+    </div>
 </body>
+
 </html>
