--- a/participantes/jonatan/jonatan.html
+++ b/participantes/jonatan/jonatan.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./styleMyPage.css">
     <title>Jonatan</title>
 </head>
 
@@ -17,9 +17,36 @@
             <a class="navOption" href="../../sobreNos.html">Sobre nós</a>
         </nav>
     </header>
-    <section class="content">
+    <section class="gridContainer">
+        <section class="aboutMe me">
+            <div>
+                <img src="../../images/jonatan.jpg" alt="Minha foto" width="200">
+            </div>
+            <div>
+                <h2 class="textAboutMe">Jonatan</h2>
+                <span class="textAboutMe">jonatan.mim@hotmail.com</span>
+                <ul class="textAboutMe listDetail">
+                    <li>28 anos</li>
+                    <li>Desenvolvedor FullStack Jr</li>
+                    <li>Nova Santa Rita/RS</li>
+                </ul>
+            </div>
+        </section>
 
+        <section class="aboutMe bio">
+            <h2>Jonatan</h2>
+            <p id="myBio">
+                Texto padrão.
+            </p>
+            <a href="../david/david.html"><button class="btn common">Anterior</button></a>
+            <a href="../marcos/marcos.html"><button class="btn common">Próximo</button></a>
+            <button class="btn edit" id="btnEdit">Editar</button>
+        </section>
+
+        <section class="aboutMe status">
+            knbçjç
+        </section>
     </section>
 </body>
-
+<script src="./scriptMyPage.js"></script>
 </html>
