Finalizando funcção js para area de Status

--- a/participantes/jonatan/jonatan.html
+++ b/participantes/jonatan/jonatan.html
@@ -48,37 +48,37 @@
             <div class="bar">
                 <span class="leftBar">Introvertido</span>
                 <span class="rightBar">Extrovertido</span>
-                <div class="marker"></div>
+                <div id="marker1" class="marker"></div>
             </div>
             <div class="bar">
                 <span class="leftBar">Analítico</span>
                 <span class="rightBar">Criativo</span>
-                <div class="marker"></div>
+                <div id="marker2" class="marker"></div>
             </div>
             <div class="bar">
                 <span class="leftBar">JS</span>
                 <span class="rightBar">HTML</span>
-                <div class="marker"></div>
+                <div id="marker3" class="marker"></div>
             </div>
             <div class="bar">
                 <span class="leftBar">Bagunçado</span>
                 <span class="rightBar">Organizado</span>
-                <div class="marker"></div>
+                <div id="marker4" class="marker"></div>
             </div>
             <div class="bar">
                 <span class="leftBar">Individual</span>
                 <span class="rightBar">Trabalho em Equipe</span>
-                <div class="marker"></div>
+                <div id="marker5" class="marker"></div>
             </div>
             <div class="bar">
                 <span class="leftBar">Soft Skills</span>
                 <span class="rightBar">Hard Skills</span>
-                <div class="marker"></div>
+                <div id="marker6" class="marker"></div>
             </div>
             <div class="bar">
                 <span class="leftBar">Conservador</span>
                 <span class="rightBar">Tomador de Risco</span>
-                <div class="marker"></div>
+                <div id="marker7" class="marker"></div>
             </div>
         </section>
     </section>
