--- a/participantes/marcos/marcos.html
+++ b/participantes/marcos/marcos.html
@@ -22,21 +22,11 @@
         <section class="grid-item item1">
             <img src="../../images/marcos.jpg" width="160" alt="Photo Marcos">
             <div class="informationPersonal">
-                <p>
-                <h1 class="tittle">Marcos</h1>
-                </p>
-                <p>
-                <h5 class="subTittle">E-mail: marcos_fernandes94@hotmail.com</h5>
-                </p>
-                <p>
-                <h5 class="subTittle">Idade: 28 anos</h5>
-                </p>
-                <p>
-                <h5 class="subTittle">Ocupação: Programador</h5>
-                </p>
-                <p>
-                <h5 class="subTittle">Cidade: São Paulo-SP</h5>
-                </p>
+                <p><h1 class="tittle">Marcos</h1></p>
+                <p><h5 class="subTittle">E-mail: marcos_fernandes94@hotmail.com</h5></p>              
+                <p><h5 class="subTittle">Idade: 28 anos</h5></p>              
+                <p><h5 class="subTittle">Ocupação: Programador</h5></p>        
+                <p><h5 class="subTittle">Cidade: São Paulo-SP</h5></p>
             </div>
         </section>
 
@@ -45,7 +35,7 @@
                 <h2>Personalidade</h2>
             </div>
 
-            <div class="bar barOne">
+            <div class="bar">
                 <div class="marker markerOne"></div>
                 <div>
                     <span class="featuresLeft">Introvertido</span>
@@ -53,7 +43,7 @@
                 </div>
             </div>
 
-            <div class="bar barTwo">
+            <div class="bar">
                 <div class="marker markerTwo"></div>
                 <div>
                     <span class="featuresLeft">Analítico</span>
@@ -61,7 +51,7 @@
                 </div>
             </div>
 
-            <div class="bar barThree">
+            <div class="bar">
                 <div class="marker markerThree"></div>
                 <div>
                     <span class="featuresLeft">JS</span>
@@ -69,7 +59,7 @@
                 </div>
             </div>
 
-            <div class="bar barFour">
+            <div class="bar">
                 <div class="marker markerFour"></div>
                 <div>
                     <span class="featuresLeft">Bagunçado</span>
@@ -77,7 +67,7 @@
                 </div>
             </div>
 
-            <div class="bar barFive">
+            <div class="bar">
                 <div class="marker markerFive"></div>
                 <div>
                     <span class="featuresLeft">Individual</span>
@@ -85,7 +75,7 @@
                 </div>
             </div>
 
-            <div class="bar barSix">
+            <div class="bar">
                 <div class="marker markerSix"></div>
                 <div>
                     <span class="featuresLeft">Soft Skills</span>
@@ -93,7 +83,7 @@
                 </div>
             </div>
 
-            <div class="bar barSeven">
+            <div class="bar">
                 <div class="marker markerSeven"></div>
                 <div>
                     <span class="featuresLeft">Conservador</span>
