--- a/participantes/ruan/ruan.html
+++ b/participantes/ruan/ruan.html
@@ -13,7 +13,8 @@
 
 
         <header>
-            <img class="logoClean" src="../../images/logoClean.png" width="70" alt="Logo Flit">
+            <a href="../../index.html"> <img class="logoClean" src="../../images/logoClean.png" width="70"
+                    alt="Logo Flit"></a>
             <nav>
                 <a class="navOption" href="../../index.html">Home</a>
                 <a class="navOption" href="../../participantes/david/david.html">Participantes</a>
