--- a/sobreNos.html
+++ b/sobreNos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./about.css">
     <title>Sobre nós</title>
 </head>
 
@@ -21,6 +21,112 @@
     <section class="content">
 
     </section>
+    <div class="content">
+        <section class="card">
+            <h1>Interesses</h1>
+            <div class="posts">
+                <article class="post s1">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </article>
+                <article class="post s1">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </article>
+                <article class="post s1">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </article>
+                <article class="post s1">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </article>
+            </div>
+        </section>
+        <section class="card">
+            <h1>Influências</h1>
+            <div class="posts">
+                <article class="post s2">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </article>
+                <article class="post s2">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </article>
+                <article class="post s2">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </article>
+                <article class="post s2">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </article>
+            </div>
+        </section>
+        <section class="card">
+            <h1>Metas</h1>
+            <div class="posts">
+                <article class="post s3">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </article>
+                <article class="post s3">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </article>
+                <article class="post s3">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </article>
+                <article class="post s3">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </article>
+            </div>
+        </section>
+        <section class="card">
+            <h1>Necessidades e expectativas</h1>
+            <div class="posts">
+                <article class="post s4">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </article>
+                <article class="post s4">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </article>
+                <article class="post s4">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </article>
+                <article class="post s4">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </article>
+            </div>
+        </section>
+        <section class="card">
+            <h1>Motivações</h1>
+            <div class="posts">
+                <article class="post s5">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </article>
+                <article class="post s5">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </article>
+                <article class="post s5">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </article>
+                <article class="post s5">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </article>
+            </div>
+        </section>
+        <section class="card">
+            <h1>Dores e Frustrações</h1>
+            <div class="posts">
+                <article class="post s6">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </article>
+                <article class="post s6">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </article>
+                <article class="post s6">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </article>
+                <article class="post s6">
+                    <h3>Lorem ipsum dolor sit amet</h3>
+                </article>
+            </div>
+        </section>
+    </div>
+
+
 </body>
 
 </html>
