add responsivity in the about page

--- a/sobreNos.html
+++ b/sobreNos.html
@@ -20,22 +20,24 @@
     </header>
     <section class="content">
 
-    </section>
-    <div class="content">
         <section class="card">
             <h1>Interesses</h1>
             <div class="posts">
                 <article class="post s1">
                     <h3>Lorem ipsum dolor sit amet</h3>
+                    <p>David</p>
                 </article>
                 <article class="post s1">
                     <h3>Lorem ipsum dolor sit amet</h3>
+                    <p>Jonatan</p>
                 </article>
                 <article class="post s1">
                     <h3>Lorem ipsum dolor sit amet</h3>
+                    <p>Marcos</p>
                 </article>
                 <article class="post s1">
                     <h3>Lorem ipsum dolor sit amet</h3>
+                    <p>Ruan</p>
                 </article>
             </div>
         </section>
@@ -44,15 +46,19 @@
             <div class="posts">
                 <article class="post s2">
                     <h3>Lorem ipsum dolor sit amet</h3>
+                    <p>David</p>
                 </article>
                 <article class="post s2">
                     <h3>Lorem ipsum dolor sit amet</h3>
+                    <p>Jonatan</p>
                 </article>
                 <article class="post s2">
                     <h3>Lorem ipsum dolor sit amet</h3>
+                    <p>Marcos</p>
                 </article>
                 <article class="post s2">
                     <h3>Lorem ipsum dolor sit amet</h3>
+                    <p>Ruan</p>
                 </article>
             </div>
         </section>
@@ -61,15 +67,19 @@
             <div class="posts">
                 <article class="post s3">
                     <h3>Lorem ipsum dolor sit amet</h3>
+                    <p>David</p>
                 </article>
                 <article class="post s3">
                     <h3>Lorem ipsum dolor sit amet</h3>
+                    <p>Jonatan</p>
                 </article>
                 <article class="post s3">
                     <h3>Lorem ipsum dolor sit amet</h3>
+                    <p>Marcos</p>
                 </article>
                 <article class="post s3">
                     <h3>Lorem ipsum dolor sit amet</h3>
+                    <p>Ruan</p>
                 </article>
             </div>
         </section>
@@ -78,15 +88,19 @@
             <div class="posts">
                 <article class="post s4">
                     <h3>Lorem ipsum dolor sit amet</h3>
+                    <p>David</p>
                 </article>
                 <article class="post s4">
                     <h3>Lorem ipsum dolor sit amet</h3>
+                    <p>Jonatan</p>
                 </article>
                 <article class="post s4">
                     <h3>Lorem ipsum dolor sit amet</h3>
+                    <p>Marcos</p>
                 </article>
                 <article class="post s4">
                     <h3>Lorem ipsum dolor sit amet</h3>
+                    <p>Ruan</p>
                 </article>
             </div>
         </section>
@@ -95,15 +109,19 @@
             <div class="posts">
                 <article class="post s5">
                     <h3>Lorem ipsum dolor sit amet</h3>
+                    <p>David</p>
                 </article>
                 <article class="post s5">
                     <h3>Lorem ipsum dolor sit amet</h3>
+                    <p>Jonatan</p>
                 </article>
                 <article class="post s5">
                     <h3>Lorem ipsum dolor sit amet</h3>
+                    <p>Marcos</p>
                 </article>
                 <article class="post s5">
                     <h3>Lorem ipsum dolor sit amet</h3>
+                    <p>Ruan</p>
                 </article>
             </div>
         </section>
@@ -112,19 +130,23 @@
             <div class="posts">
                 <article class="post s6">
                     <h3>Lorem ipsum dolor sit amet</h3>
+                    <p>David</p>
                 </article>
                 <article class="post s6">
                     <h3>Lorem ipsum dolor sit amet</h3>
+                    <p>Jonatan</p>
                 </article>
                 <article class="post s6">
                     <h3>Lorem ipsum dolor sit amet</h3>
+                    <p>Marcos</p>
                 </article>
                 <article class="post s6">
                     <h3>Lorem ipsum dolor sit amet</h3>
+                    <p>Ruan</p>
                 </article>
             </div>
         </section>
-    </div>
+    </section>
 
 
 </body>
