about ruan added

--- a/sobreNos.html
+++ b/sobreNos.html
@@ -36,7 +36,7 @@
                     <p>Marcos</p>
                 </article>
                 <article class="post s1">
-                    <h3>Lorem ipsum dolor sit amet</h3>
+                    <h3>Conseguir emprego homeoffice em desenvolvimento web</h3>
                     <p>Ruan</p>
                 </article>
             </div>
@@ -57,7 +57,7 @@
                     <p>Marcos</p>
                 </article>
                 <article class="post s2">
-                    <h3>Lorem ipsum dolor sit amet</h3>
+                    <h3>Christyan Moraes, Filipe Deschamps, Giovanni Sacchitiello.</h3>
                     <p>Ruan</p>
                 </article>
             </div>
@@ -78,7 +78,7 @@
                     <p>Marcos</p>
                 </article>
                 <article class="post s3">
-                    <h3>Lorem ipsum dolor sit amet</h3>
+                    <h3>Evoluir no desenvolvimento web e conseguir uma excelente renda.</h3>
                     <p>Ruan</p>
                 </article>
             </div>
@@ -99,7 +99,7 @@
                     <p>Marcos</p>
                 </article>
                 <article class="post s4">
-                    <h3>Lorem ipsum dolor sit amet</h3>
+                    <h3>Melhorar a infraestrutura do meu local de trabalho.</h3>
                     <p>Ruan</p>
                 </article>
             </div>
@@ -120,7 +120,7 @@
                     <p>Marcos</p>
                 </article>
                 <article class="post s5">
-                    <h3>Lorem ipsum dolor sit amet</h3>
+                    <h3>Família.</h3>
                     <p>Ruan</p>
                 </article>
             </div>
@@ -141,7 +141,7 @@
                     <p>Marcos</p>
                 </article>
                 <article class="post s6">
-                    <h3>Lorem ipsum dolor sit amet</h3>
+                    <h3>Baixa condição financeira.</h3>
                     <p>Ruan</p>
                 </article>
             </div>
