Deixando a pagina responsiva.

--- a/participantes/david/david.html
+++ b/participantes/david/david.html
@@ -58,9 +58,12 @@
             </div>
             <div class="botao">
                 <a href="../../index.html">Anterior</a>
+
                 <a href="../../participantes/jonatan/jonatan.html">Proximo</a>
-                <a>Editar</a>
+
+                <button class="editar">Editar</button>
             </div>
+
 
 
         </section>
@@ -140,7 +143,13 @@
     linha6.setAttribute("style", 'left: 20%')
 
     const linha7 = document.querySelector('.marker7')
-    linha7.setAttribute("style", 'left: 60%')</script>
+    linha7.setAttribute("style", 'left: 60%')
 
+    const texto = querySelector(".editar")
+    const novo = all;
+    texto.textContent = all;
+
+
+</script>
 
 </html>
