Preenchendo minha parte da pagina sobre nós

--- a/sobreNos.html
+++ b/sobreNos.html
@@ -28,7 +28,7 @@
                     <p>David</p>
                 </article>
                 <article class="post s1">
-                    <h3>Lorem ipsum dolor sit amet</h3>
+                    <h3>Conhecer novas tecnologias, fazer bons amigos/colegas, me especializar em .Net</h3>
                     <p>Jonatan</p>
                 </article>
                 <article class="post s1">
@@ -49,7 +49,7 @@
                     <p>David</p>
                 </article>
                 <article class="post s2">
-                    <h3>Lorem ipsum dolor sit amet</h3>
+                    <h3>Gabriel Froés, Vanessa Weber, Fabio Akita, Felipe Deschamps, Giovanni Sacchitiello</h3>
                     <p>Jonatan</p>
                 </article>
                 <article class="post s2">
@@ -70,7 +70,7 @@
                     <p>David</p>
                 </article>
                 <article class="post s3">
-                    <h3>Lorem ipsum dolor sit amet</h3>
+                    <h3>Ser bem sucedido, ter a experiência de trabalhar na europa, inglês fluente.</h3>
                     <p>Jonatan</p>
                 </article>
                 <article class="post s3">
@@ -91,7 +91,7 @@
                     <p>David</p>
                 </article>
                 <article class="post s4">
-                    <h3>Lorem ipsum dolor sit amet</h3>
+                    <h3>Conseguir a tão sonhada primeira vaga e voar!</h3>
                     <p>Jonatan</p>
                 </article>
                 <article class="post s4">
@@ -112,7 +112,7 @@
                     <p>David</p>
                 </article>
                 <article class="post s5">
-                    <h3>Lorem ipsum dolor sit amet</h3>
+                    <h3>Família, fé, amigos e sonhos.</h3>
                     <p>Jonatan</p>
                 </article>
                 <article class="post s5">
@@ -133,7 +133,7 @@
                     <p>David</p>
                 </article>
                 <article class="post s6">
-                    <h3>Lorem ipsum dolor sit amet</h3>
+                    <h3>Tempo perdido...</h3>
                     <p>Jonatan</p>
                 </article>
                 <article class="post s6">
