--- a/participantes/marcos/marcos.html
+++ b/participantes/marcos/marcos.html
@@ -22,11 +22,21 @@
         <section class="grid-item item1">
             <img src="../../images/marcos.jpg" width="160" alt="Photo Marcos">
             <div class="informationPersonal">
-                <p><h1 class="tittle">Marcos</h1></p>
-                <p><h5 class="subTittle">E-mail: marcos_fernandes94@hotmail.com</h5></p>              
-                <p><h5 class="subTittle">Idade: 28 anos</h5></p>              
-                <p><h5 class="subTittle">Ocupação: Programador</h5></p>        
-                <p><h5 class="subTittle">Cidade: São Paulo-SP</h5></p>
+                <p>
+                <h1 class="tittle">Marcos</h1>
+                </p>
+                <p>
+                <h5 class="subTittle">E-mail: marcos_fernandes94@hotmail.com</h5>
+                </p>
+                <p>
+                <h5 class="subTittle">Idade: 28 anos</h5>
+                </p>
+                <p>
+                <h5 class="subTittle">Ocupação: Programador</h5>
+                </p>
+                <p>
+                <h5 class="subTittle">Cidade: São Paulo-SP</h5>
+                </p>
             </div>
         </section>
 
@@ -106,14 +116,14 @@
                     Gosto de ouvir uma boa música, seja pagode, sertanejo, hip-hop, eletrônica ou até mesmo uns black
                     antigão. Meu maior objetivo
                     hoje é trabalhar na área de tecnologia, ter uma carreira sólida e porque não morar a 500 metros da
-                    praia?!
-                </h4>
+                    praia?!</h4>
                 </p>
-            </div>
-            <div class="buttons">
-                <a href="../../participantes/jonatan/jonatan.html" class="back button">Anterior</a>
-                <a href="../../participantes/ruan/ruan.html" class="next button">Próximo</a>
-                <a class="edit button">Editar</a>
+                <div class="buttons">
+                    <a href="../../participantes/jonatan/jonatan.html" class="back button">Anterior</a>
+                    <a href="../../participantes/ruan/ruan.html" class="next button">Próximo</a>
+                    <a class="edit button">Editar</a>
+                </div>
+
             </div>
 
 
@@ -122,4 +132,5 @@
     </section>
 </body>
 <script src="marcos.js"></script>
+
 </html>
