Preenchendo os cards do sobreNós

--- a/sobreNos.html
+++ b/sobreNos.html
@@ -32,7 +32,7 @@
                     <p>Jonatan</p>
                 </article>
                 <article class="post s1">
-                    <h3>Lorem ipsum dolor sit amet</h3>
+                    <h3>Trabalhar na area de tecnologia, prefencialmente homeoffice e talvez numa empresa em outro país.</h3>
                     <p>Marcos</p>
                 </article>
                 <article class="post s1">
@@ -53,7 +53,11 @@
                     <p>Jonatan</p>
                 </article>
                 <article class="post s2">
-                    <h3>Lorem ipsum dolor sit amet</h3>
+                    <h3>Minha primeira influência no mundo da tecnologia foi meu primo, foi quem conversou comigo sobre este mundo
+                        e me apresentou a DoDev na época. Hoje, com alguns meses já de curso, admiro o trabalho do Giovani Sacchitiello, 
+                        vejo que um cara muito competente e com uma capacidade ímpar de transmitir conhecimento. Assim como o Luizão,
+                        é notável e admirável o conhecimento que possui, ensina com muita propriedade!
+                    </h3>
                     <p>Marcos</p>
                 </article>
                 <article class="post s2">
@@ -74,7 +78,9 @@
                     <p>Jonatan</p>
                 </article>
                 <article class="post s3">
-                    <h3>Lorem ipsum dolor sit amet</h3>
+                    <h3>Minha principal meta é ser bem sucedido na programação, trabalhar numa grande empresa com pessoas que estejam dispostas
+                        a crescer profissionalmente. Conhecer outras culturas e países também é uma meta!
+                    </h3>
                     <p>Marcos</p>
                 </article>
                 <article class="post s3">
@@ -95,7 +101,7 @@
                     <p>Jonatan</p>
                 </article>
                 <article class="post s4">
-                    <h3>Lorem ipsum dolor sit amet</h3>
+                    <h3>Ser 1% melhor do que ontem é a minha maior necessidade. E a minha expectativa é ingressar no mercado de tecnologia. </h3>
                     <p>Marcos</p>
                 </article>
                 <article class="post s4">
@@ -116,7 +122,9 @@
                     <p>Jonatan</p>
                 </article>
                 <article class="post s5">
-                    <h3>Lorem ipsum dolor sit amet</h3>
+                    <h3>Minha família! Depois que a minha filha nasceu tudo mudou, hoje a prioridade é ter uma condição boa de vida para
+                        poder proporcionar a ela tudo de melhor.
+                    </h3>
                     <p>Marcos</p>
                 </article>
                 <article class="post s5">
@@ -137,7 +145,7 @@
                     <p>Jonatan</p>
                 </article>
                 <article class="post s6">
-                    <h3>Lorem ipsum dolor sit amet</h3>
+                    <h3>Não ter condição para fazer aquilo que desejo.</h3>
                     <p>Marcos</p>
                 </article>
                 <article class="post s6">
